# Hexlet_3

./: LICENSE  Makefile  README.md  pyproject.toml
src/: config.py  main.py
src/api/: __init__.py  exc_handlers.py
src/api/controllers/: __init__.py  purchase.py  recommendation.py
src/api/dtos/: purchase.py  recommendation.py
src/apps/: base_exception.py
src/apps/purchase/: __init__.py  dtos.py  entity.py  exceptions.py  mapper.py  repository.py
src/apps/purchase/interactors/: base_interactor.py  create.py  delete.py  get_by_id.py  get_list.py
src/apps/recommendation/: __init__.py  dtos.py  entity.py  exceptions.py  mapper.py  repository.py
src/apps/recommendation/interactors/: base_interactor.py  generate.py  get_for_user.py
src/data_access/mappers/: purchase_mapper.py  recommendation_mapper.py
src/data_access/migrations/versions/: 2024_12_15_1639-26ec461a7c10_create_user_product_purchase_tables.py  2024_12_15_2100-13765e1c0a8c_create_recommendations_table.py
src/data_access/models/: __init__.py  base.py  product.py  purchase.py  recommendation.py  user.py
src/data_access/repositories/: __init__.py  purchase_repository.py  recommendation_repository.py
src/providers/: adapters.py  interactors.py
